# EmberForge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_ember.sh
.github/workflows/: test.yml
backend/: README.md  main.py  requirements.txt
deploy/: README.md  emberforge.plist  emberforge.service
device/: README.md
docs/: HARDWARE.md  HUB_ARCHITECTURE.md  M7_SECURITY.md  PHASE_0.md  RELEASE_1.0.md  ROADMAP.md
emberforge/: __init__.py  __main__.py  cli.py  context.py  errors.py  network.py  paths.py  settings.py
emberforge/api/: __init__.py  app.py  deps.py  exceptions.py  middleware.py
emberforge/client/: __init__.py  audio_playback.py  mac_voice.py  ptt.py  recording.py
emberforge/config/: __init__.py  env_file.py
firmware/: README.md
personas/: ember.json  hal_9000.json
phase-0-brain/: README.md  mac_voice_companion.py  requirements.txt
prompts/: ember_agent_prompt.md  tts_pronunciations.json  user_context.md
scripts/: record_voice_sample.py
tests/: conftest.py  device_contract.py  test_api.py  test_context.py  test_conversation.py  test_conversation_history.py  test_converse_service.py  test_device_contract.py  test_elevenlabs_tts.py  test_hub.py  test_llm.py  test_mac_voice.py  test_network.py  test_observability.py  test_personas.py  test_platform.py  test_ptt.py  test_recording.py  test_reliability.py  test_security.py  test_settings.py  test_setup_api.py  test_tools.py  test_tts_text.py  test_voice_providers.py  test_wake_phrase.py
voices/: README.md
(+82 files in other folders)
