[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emberforge"
version = "1.1.0"
description = "EmberForge voice companion backend — persona-driven AI for Mac and consumer devices"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Kilynn Weber" }]
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "pydantic>=2.8.0,<3.0",
    "pydantic-settings>=2.4.0,<3.0",
    "httpx>=0.27.0,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "numpy>=1.26.0,<3.0",
    "faster-whisper>=1.0.0,<2.0",
    "pyotp>=2.9.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "jsonschema>=4.23.0,<5.0",
]
mac = [
    "sounddevice>=0.5.0,<1.0",
    "requests>=2.32.0,<3.0",
    "pynput>=1.7.0,<2.0",
]

[project.scripts]
emberforge = "emberforge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["emberforge*"]

[tool.setuptools.package-data]
emberforge = ["web/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]